freest/test/prog/Invalid/SessionPatterns/WaitAndVar/WaitAndVar.fst
module WaitAndVar where

f : Wait -> ()
f Wait = ()
f c = wait c